# Syncra

./: .gitignore  Cargo.toml  LICENSE  README.md  Syncra.py  Syncra.sln  SyncraEngine.sln
.github/: FUNDING.yml
AssetServer/: AssetServer.csproj
Engine/: EcsContext.cs  Engine.csproj  Entity.cs  IDriver.cs  ISystem.cs  Scene.cs
SynFlow/: SynFlow.cs
Syncra/: Engine.cs  Entity.cs  IComponent.cs  ISystem.cs  Input.cs  InputSystem.cs  Instance.cs  NLog.config  OutputSystem.cs  Program.cs  Renderer.cs  Scene.cs  Syncra.csproj  System.cs  Window.cs  World.cs  XR.cs
Syncra-js/: index.js  package.json
Syncra/Archetypes/: Node.cs  SpinnerNode.cs
Syncra/Assets/: Material.cs  Mesh.cs  Shader.cs  Texture.cs
Syncra/Components/: Active.cs  Archetype.cs  Armature.cs  ArmatureComponent.cs  Children.cs  GlobalTransform.cs  Guid.cs  INetworkedComponent.cs  Instance.cs  LocalTransform.cs  MeshRenderer.cs  MeshRendererComponent.cs  Name.cs  Parent.cs  RotationSpeed.cs  Spinner.cs  SpinnerComponent.cs  Transform.cs  TransformComponent.cs  UUID.cs  Uuid.cs
Syncra/DataTypes/: BoneRestTransforms.cs  BoneTransforms.cs  Sync.cs
Syncra/Drivers/: Renderer.cs  Window.cs  XR.cs
Syncra/Enums/: WorldAccessLevel.cs
Syncra/Handles/: VRContext.cs  XRContext.cs
Syncra/Helpers/: BitFlagHelpers.cs
Syncra/Networking/: Serializers.cs
Syncra/Nodes/: Node.cs  SpinnerNode.cs
Syncra/Systems/: AnimationSystem.cs  IWorldSystem.cs  MeshRendererSystem.cs  ParentSystem.cs  PhysicsSystem.cs  Spinner.cs  SpinnerSystem.cs  TransformSystem.cs
Syncra/Types/: BoneRestTransform.cs  Node.cs  XRContext.cs
Syncra/Utilities/: BitFlagHelper.cs  Rotation.cs  Serializers.cs
SyncraAssetServer/: SyncraAssetServer.csproj
SyncraCorePackages/: Slider.cs  SyncraCorePackages.csproj  Transform.cs
SyncraCorePackages/Components/: Transform.cs  Velocity.cs
SyncraCorePackages/Systems/: VelocitySystem.cs
SyncraEngine/: CMakeLists.txt  Cargo.toml  Component.cs  ECSContext.cs  EcsContext.cs  Engine.cs  Entity.cs  IComponent.cs  IDriver.cs  ISystem.cs  JobScheduler.cs  JobSystem.cs  Program.cs  Scene.cs  SyncraEngine.cs  SyncraEngine.csproj  World.cs
SyncraOS/: CMakeLists.txt  Cargo.toml  build.rs  conanfile.txt
SyncraOS/src/: main.c  main.rs
SyncraOS/src/bindings/: cglm.rs  glfw.rs  openxr.rs  vulkan.rs
SyncraOfficialPackages/: Spinner.cs  SyncraOfficialPackages.csproj
SyncraOfficialPackages/Components/: Name.cs  Parent.cs  Slider.cs  Spinner.cs  Transform.cs
SyncraOfficialPackages/Drivers/: Renderer.cs  Window.cs  XR.cs  Xr.cs
SyncraOfficialPackages/Systems/: Bootstrap.cs  Input.cs  Output.cs  Slider.cs
syncra/: Cargo.toml  CharacterController.cs  Syncra.sln  SyncraEngineRunner.cs  icon.svg.import  local_world.tscn  node_3d.tscn  project.godot
syncra-asset-server/: Cargo.toml
syncra-audio/: Cargo.toml
syncra-audio/src/: main.rs
syncra-client/: Cargo.toml
syncra-client/src/: main.rs
syncra-engine/: Cargo.toml
syncra-engine-client/: Cargo.toml
syncra-engine-client/src/: main.rs
syncra-engine-tests/: icon.svg.import  node_3d.tscn  project.godot
syncra-engine-tests/src/: main.rs
syncra-engine/src/: main.rs
syncra-gamepad/: Cargo.toml
syncra-headless/: Cargo.toml
syncra-input/: Cargo.toml  build.rs
syncra-input/src/: main.rs
syncra-official-packages/: example-script.sy  example.sy
syncra-openxr/: Cargo.toml
syncra-openxr/src/: main.rs
syncra-os/: Cargo.toml
syncra-os-tests/: icon.svg.import  node_3d.tscn  project.godot
syncra-os/src/: window.rs
syncra-renderer/: Cargo.toml
syncra-renderer/src/: camera.rs  debug.rs  hdr.rs  lib.rs  main.rs  model.rs  resources.rs  texture.rs
syncra-rs/: Cargo.toml
syncra-rs/src/: lib.rs  main.rs
syncra-rs/src/anim/: mod.rs
syncra-rs/src/archetypes/: spinner.rs
syncra-rs/src/assets/: material.rs  mesh.rs  mod.rs
syncra-rs/src/audio/: mod.rs
syncra-rs/src/components/: mesh_renderer_component.rs  mod.rs  position.rs  rotation.rs  scale.rs  spinner.rs  transform_component.rs
syncra-rs/src/input/: mod.rs
syncra-rs/src/math/: mod.rs
syncra-rs/src/network/: mod.rs
syncra-rs/src/physics/: mod.rs
syncra-rs/src/render/: mod.rs
syncra-rs/src/rendering/: mod.rs
syncra-rs/src/resources/: texture.rs
syncra-rs/src/script/: mod.rs
syncra-rs/src/state/: mod.rs
syncra-rs/src/state/assets/: mesh.rs
syncra-rs/src/state/components/: mesh_renderer.rs  mod.rs  transform.rs
syncra-rs/src/systems/: mod.rs  spinner.rs
syncra-rs/src/ui/: mod.rs
syncra-rs/src/vr/: mod.rs
syncra-rs/src/window/: mod.rs
syncra-rs/src/xr/: mod.rs
syncra-runtime/: Cargo.toml
syncra-runtime-tests/: Cargo.toml
syncra-runtime/src/: main.rs
syncra-server/: Cargo.toml
syncra-tests/: Cargo.toml
syncra-window/: Cargo.toml
syncra-window/src/: app.rs  main.rs
syncra-windowing/: Cargo.toml
syncra-windowing/src/: main.rs  window.rs
syncra.godot/: Syncra.tscn  openxr_action_map.tres  project.godot
syncra.godot.rendering/: icon.svg.import  project.godot
syncra.godot.windowing/: icon.svg.import  project.godot
syncra.godot.xr/: icon.svg.import  project.godot
syncra/src/: app.rs  main.rs  renderer.rs  state.rs  window.rs
syncra/src/components/: position.rs  velocity.rs
syncra/src/systems/: velocity.rs
