[package]
name = "syncra-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0"
openxr = "0.19"
gltf = "1.4"
winit = "0.30"
pollster = "0.4"
tokio = "1.41"
bytemuck = { version = "1.20", features = [ "derive" ] }
log = "0.4.22"
cfg-if = "1.0.0"
reqwest = "0.12.9"
anyhow = "1.0.93"
image = "0.25"
cgmath = "0.18"
fs_extra = "1.3"
glob = "0.3"
instant = "0.1"
tobj = { version = "4.0", features = ["async"] }

[lib]
crate-type = ["cdylib"]