[package]
name = "syncra-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
ash = "0.38"
metal = "0.30"
d3d12 = "22.0"
wgpu = "23.0"
openxr = "0.11"
cpal = "0.15"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
nalgebra = "0.33"
image = "0.25"
rapier3d = "0.22"
gltf = "1.4"
gilrs = "0.11"
blend = "0.8"
obj = "0.10"
bevy_ecs = "0.14"
steam-audio = "0.3"