[package]
name = "syncra-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "23.0"
openxr = "0.11"
cpal = "0.15"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
nalgebra = "0.33"
image = "0.25"
rapier3d = "0.22"
gltf = "1.4"
gilrs = "0.11"
blend = "0.8"
obj = "0.10"
bevy_ecs = "0.14"
steam-audio = "0.3"
bevy_asset = "0.14"
bevy_reflect = "0.14"
lazy_static = "1.5.0"
rand = "0.8"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
d3d12 = "22.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.30"

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"