[package]
name = "syncra-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
openxr = { version = "0.19", features = ["loaded"] }
cpal = "0.15"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
nalgebra = "0.33"
image = "0.25"
rapier3d = "0.22"
gltf = "1.4"
gilrs = "0.11"
blend = "0.8"
obj = "0.10"
bevy_ecs = "0.14"
steam-audio = "0.3"
bevy_asset = "0.14"
bevy_reflect = "0.14"
lazy_static = "1.5"
rand = "0.8"
raw-window-handle = "0.6"
openxr-sys = "0.11"
libc = "0.2"
libloading = "0.8"
ctrlc = "3.4"
tokio = "1.41"

[target.'cfg(target_os = "windows")'.dependencies]
d3d12 = "22.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.30"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }

[lib]
crate-type=["rlib", "cdylib"]