[package]
name = "syncra-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
openxr = "0.19"

[target.'cfg(target_os = "windows")'.dependencies]
d3d12 = "22.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.30"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }