[package]
name = "syncra"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.32"
openxr = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[target.'cfg(target_os = "windows")'.dependencies]
d3d12 = "22.0"
winapi = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.30"
cocoa = "0.26"